--- a/Develop/src/styles/App.css
+++ b/Develop/src/styles/App.css
@@ -13,8 +13,20 @@ body, html {
 }
 
 .home {
-  text-align: center;
+  max-width: 400px;
+  margin: 0 auto;
   padding: 20px;
+  text-align: center;
+}
+
+form {
+  margin-top: 20px;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0;
 }
 
 button {
@@ -38,3 +50,17 @@ button {
   justify-content: center;
   visibility: hidden;
   opacity:
+}
+
+
+/* BUDGET */
+
+
+/* GROCERIES */
+.grocery-item.purchased {
+  text-decoration: line-through;
+  color: gray;
+}
+
+/* TRANSACTIONS */
+
