--- a/Develop/src/styles/App.css
+++ b/Develop/src/styles/App.css
@@ -4,6 +4,64 @@
   box-sizing: border-box;
 }
 
+.App {
+  display: flex;
+  height: 100vh;
+}
+
+nav {
+  width: 200px;
+  background-color: #0c0b0f;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.budgie-logo {
+  margin-top: -10px;
+  margin-left: -6px;
+  transform: scale(1.35);
+  pointer-events: none;
+  user-select: none;
+  -webkit-user-drag: none;
+  user-drag: none;
+}
+
+.menu {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  margin-top: -10px;
+  width: 100%;
+}
+
+.menu-list {
+  font-size: larger;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.menu-list a {
+  display: block;
+  width: 100%;
+  text-decoration: none;
+  color: #333;
+  font-size: 1rem;
+  padding: 10px 15px;
+  box-sizing: border-box;
+}
+
+.menu-list a:hover {
+  background-color: #3c583f;
+  color: #19b314;
+}
+
+main {
+  flex: 1;
+  padding: 20px;
+}
+
 body, html {
   color: #148838;
   background-color: #14161A;
@@ -49,7 +107,8 @@ button {
   align-items: center;
   justify-content: center;
   visibility: hidden;
-  opacity:
+  opacity: 0;
+  transition: visibility 0s, opacity 0.3s;
 }
 
 
@@ -63,4 +122,22 @@ button {
 }
 
 /* TRANSACTIONS */
+
+.transactions-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.transactions-table th,
+.transactions-table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: center;
+}
+
+.transactions-table th {
+  background-color: #f4f4f4;
+  font-weight: bold;
+}
 
