--- a/Develop/src/styles/App.css
+++ b/Develop/src/styles/App.css
@@ -44,15 +44,20 @@ nav {
   display: block;
   width: 100%;
   text-decoration: none;
-  color: #333;
+  color: #ffffff;
   font-size: 1rem;
+  font-weight: 350;
   padding: 10px 15px;
   box-sizing: border-box;
 }
 
 .menu-list a:hover {
-  background-color: #3c583f;
-  color: #19b314;
+  background-color: #B281FC;
+  color: #ffffff;
+}
+
+.menu-list button {
+  color: #ffffff;
 }
 
 main {
@@ -61,7 +66,7 @@ main {
 }
 
 body, html {
-  color: #148838;
+  color: #27ad56;
   background-color: #14161A;
   margin: 0;
   padding: 0;
@@ -85,6 +90,13 @@ input {
   margin: 5px 0;
 }
 
+.titles {
+  color: #98E970;
+  font-family: sans-serif;
+  font-size: xx-large;
+  font-weight: 900;
+}
+
 /* SIGN UP / LOG IN */
 .user-form {
   text-align: left;
@@ -94,41 +106,24 @@ input {
 }
 
 .sign-up-btn {
-  background-color: #B281FC;
+  background-color: #9c5de0;
   color: white;
   padding: 10px 20px;
   border-radius: 4px;
   cursor: pointer;
   transition: all 0.3s ease;
   margin: 5px;
+  font-weight: bold;
 }
 
 .sign-up-btn.active {
-  background-color: #9a5ae0;
+  background-color: #9c5de0;
+  font-weight: bold;
 }
 
 .sign-up-btn:hover {
-  background-color: #8c4ec4;
-  transform: scale(1.05);
-}
-
-.misc-btn {
-  background-color: #27c95f;
-  color: white;
-  padding: 10px 20px;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  margin: 5px;
-}
-
-.misc-btn.active {
-  background-color: #1fa34f;
-}
-
-
-.misc-btn:hover {
-  background-color: #22b952;
+  background-color: #8247b6;
+  font-weight: bold;
   transform: scale(1.05);
 }
 
@@ -262,12 +257,13 @@ input {
 }
 
 .mark-purchased-button {
-  border: 2px solid rgb(255, 255, 255);
+  margin-top: 10px;
   padding: 10px 20px;
   background-color: #27c95f;
   color: rgb(255, 255, 255);
   font-weight: bold;
   cursor: pointer;
+  border-radius: 4px;
   transition: all 0.3s ease;
 }
 
@@ -277,10 +273,6 @@ input {
 }
 
 /* BUDGET */
-.budget-title {
-  font-size: xx-large;
-  color: #98E970;
-}
 
 .budget-box {
   color: #0c0b0f;
@@ -330,6 +322,25 @@ input {
 }
 
 /* MISC UI */
+.misc-btn {
+  background-color: #27ad56;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  margin: 5px;
+  font-weight: bold;
+}
+
+.misc-btn.active {
+  background-color: #27ad56;
+}
+
+.misc-btn:hover {
+  background-color: #1d8f41;
+  transform: scale(1.05);
+}
 
 .delete-btn {
   background-color: red;
